set link in the about to member of a team and update on press page

--- a/about.html
+++ b/about.html
@@ -117,13 +117,17 @@
         <section class="about__team container-1" id="team">
             <h3 class="about__team--heading opacity-animation">Our Team</h3>
             <div class="about__team--container opacity-animation">
+                
                 <div class="member">
-                    <div class="img-container">
-                        <img src="/frontend/assets/images/member-1.png" class="member__img" alt="team member image">
-                    </div>
-                    <h5 class="member__name">Maria Ida Palmieri</h5>
-                    <p class="member__designation">Managing Partner</p>
+                    <a href="#" class="member__link">
+                        <div class="member__img-container">
+                            <img src="/frontend/assets/images/member-1.png" class="member__img" alt="team member image">
+                        </div>
+                        <h5 class="member__name">Maria Ida Palmieri</h5>
+                        <p class="member__designation">Managing Partner</p>
+                    </a>
                 </div>
+
                 <div class="member">
                     <div class="img-container">
                         <img src="/frontend/assets/images/member-1.png" class="member__img" alt="team member image">
