update press page

--- a/press.html
+++ b/press.html
@@ -187,7 +187,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./frontend/scripts/scrollAnimation.js"></script>
     <script>
-        const a = new ImgPreviewer('body', {
+        const a = new ImgPreviewer('#app', {
 			scrollbar: true
 		});
     </script>
