--- a/index.html
+++ b/index.html
@@ -341,10 +341,10 @@
                 <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/Global_Shapers_Logo.svg.png" alt=""></a>
             </div>
             <div class="brand-container">
-                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/erste.svg" alt=""></a>
+                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/erste.png" alt=""></a>
             </div>
             <div class="brand-container">
-                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/otto.svg" alt=""></a>
+                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/otto.png" alt=""></a>
             </div>
             <div class="brand-container">
                 <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/MM_rgb_logo.png" alt=""></a>
