--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
         <!-- CONTRIBUTION SECTION START -->
         <section class="about__contribution container-1" id="contribution">
             <div class="container">
-                <h3 class="opacity-animation">Our Contribution</h3>
+                <h3 class="opacity-animation about__team--heading">Our Contribution</h3>
                 <p class="text opacity-animation">In providing our services, we contribute to the achievement of Sustainable Development Goals, while always contributing to Professor Yunus' vision of "A World of Three Zeroes: Zero Poverty, Zero Unemployment and Zero Net Carbon Emissions.</p>
                 <div class="logo-container opacity-animation">
                     <img src="/frontend/assets/logo/sdg-logo.png" class="logo" alt="SDG logo">
@@ -200,7 +200,7 @@
 
         <!-- FAMILY SECTION END -->
         <section class="about__family container-1" id="family">
-            <h3 class="about__family--heading opacity-animation">Our family</h3>
+            <h3 class="about__team--heading opacity-animation">Our family</h3>
             <div class="about__family--logo-container opacity-animation">
                 <a href="#"><img class="logo" src="/frontend/assets/logo/yunus_centre-logo.png" alt="family logo"></a>
                 <a href="#"><img class="logo" src="/frontend/assets/logo/yunus_environment_hub-logo.png" alt="family logo"></a>
