--- a/contact.html
+++ b/contact.html
@@ -112,6 +112,12 @@
             <div>
                 <h2>Contact Us</h2>
             </div>
+            <!-- <div class="gcl-success">
+                <p><i class="fas fa-check-circle"></i> {{success}}</p>
+            </div>
+            <div class="gcl-error">
+                <p><i class="fas fa-times-circle"></i> {{error}}</p>   
+            </div> -->
             <form>
                 <div class="input-box">
                     <label>Name*</label>
