--- a/index.html
+++ b/index.html
@@ -130,8 +130,11 @@
             <div class="what-we-do-body">
                 <!-- path line -->
                 <div class="path-line">
-                    <svg viewBox="0 0 2 1172" fill="red" preserveAspectRatio="xMidYMax meet">
+                    <!-- <svg viewBox="0 0 2 1172" fill="none" preserveAspectRatio="xMidYMax meet">
                         <path d="M1 0L1 1172" stroke="#72725D" stroke-width="2" />
+                    </svg> -->
+                    <svg viewBox="0 0 2 917" fill="none">
+                        <path d="M1 0V917" stroke="#72725D"/>
                     </svg>
                 </div>
                 <!-- inspire grid -->
